--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
-// Placeholder content for index.html
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>OTS App</title>
+</head>
+<body>
+  <div id="root">OTS App Final Version</div>
+</body>
+</html>
